# LibCMaker_Skia

./: README.md  cmr_build_skia.cmake
.github/workflows/: LibCMaker_CI.yml
ci/: ci_install_packages.sh  ci_lib_params.sh
cmake/: SkiaConfig.in.cmake  cmr_build_rules_skia.cmake  cmr_find_package_skia.cmake  cmr_get_download_params_skia.cmake
cmake/old_with_deps/: SkiaConfig.in.cmake  cmr_build_rules_skia.cmake
patch/skia-m98/: BUILD.gn__Android_iOS_build.patch  Deps__Build_third_party_libs_as_shared.patch  GN__export_icu_from_skia.patch
samples/ci_sample/: CMakeLists.txt  README.md
samples/ci_sample/src/: FileUtil.cpp  FileUtil.h  example.cpp  example_test.cpp  example_test_icu.cpp  example_test_skia.cpp
samples/ci_sample/test/: CMakeLists.txt
samples/ci_sample/test/data/graphics_1/: Skia_draw_test_sample.ppm
samples/ci_sample/test/data/graphics_2/: Skia_draw_test_sample.ppm
samples/ci_sample/test/data/graphics_3/: Skia_draw_test_sample.ppm
